[package]
name = "strudel"
version = "1.0.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = "Rust port of the st_hash C library"
repository = "https://github.com/artichoke/strudel"
readme = "README.md"
license = "MIT"
keywords = ["hash", "hashtable", "ffi", "port"]
categories = ["api-bindings", "data-structures", "external-ffi-bindings"]
include = [
  "**/*.rs",
  "LICENSE",
  "README.md"
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
fnv = { version = "1", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
memoffset = "0.5.3"

[features]
default = ["capi-specialized-init"]
capi-specialized-init = ["capi"]
capi = ["api", "fnv"]
api = ["libc"]
debug = []

[profile.release]
codegen-units = 1
lto = true
