[package]
name = "strudel-ffi"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = "Rust port of the st_hash C library"
repository = "https://github.com/artichoke/strudel"
readme = "README.md"
license = "MIT"
keywords = ["hash", "hashtable", "ffi", "port"]
categories = ["api-bindings", "data-structures", "external-ffi-bindings"]
include = [
  "**/*.rs",
  "LICENSE",
  "README.md"
]

[lib]
crate-type = ["cdylib"]
name = "strudel"

[dependencies]
fnv = "1.0"
libc = "0.2"
strudel = { version = "1.0", path = ".." }

[dev-dependencies]
memoffset = "0.6"