[package]
name = "strudel-ffi"
version = "0.1.0"
authors = ["Ryan Lopopolo <rjl@hyperbo.la>"]
edition = "2018"
description = "Rust port of the st_hash C library"
repository = "https://github.com/artichoke/strudel"
readme = "README.md"
license = "MIT"
keywords = ["hash", "hashtable", "ffi", "port"]
categories = ["api-bindings", "data-structures", "external-ffi-bindings"]
include = ["src/**/*", "LICENSE", "README.md"]

[lib]
crate-type = ["cdylib"]
name = "strudel_st"

[dependencies]
fnv = "1.0.7"
libc = "0.2.118"
strudel = { version = "=1.0.0", path = ".." }

[dev-dependencies]
memoffset = "0.7.1"

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu` and only builds
# that target. `strudel-ffi` has the same API and code on all targets.
default-target = "x86_64-unknown-linux-gnu"
targets = []
rustdoc-args = ["--cfg", "docsrs"]
